Tue Oct 11 16:38:32 2016  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb (String#pretty_print): Defined to print a string as
	  multiple lines.
	  [ruby-core:76800] [Feature#12664] proposed by Petr Chalupa.

Mon Oct 10 15:22:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): bind the open fd to an IO instance
	  before waiting FIFO, not to leak the fd if interrupted.

Mon Oct 10 12:40:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): compare with EXEEXT instead of hard
	  coded name, and do not match with mere EXEEXT.

	* ruby.c (open_load_file): open in binary mode if available, as
	  parser deals with EOLs.

	* io.c (prep_io): reduce isatty call (and its system call) on
	  Cygwin.

Sun Oct  9 23:05:53 2016  Prathamesh Sonpatki  <csonpatki@gmail.com>

	* array.c, class.c: Fixed documentation where Fixnum was referred
	  directly to use Integer, as Fixnum and Bignum are now unified
	  into Integer and direct usage is deprecated.  [Fix GH-1459]

Sun Oct  9 11:37:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (VM_ASSERT): stringify expr here before expansion in
	  RUBY_ASSERT_WHEN.

Sat Oct  8 10:54:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/memory_status/memory_status.c (read_status): use
	  Win32 GetProcessMemoryInfo API.

	* ext/-test-/memory_status/memory_status.c: get memory sizes by
	  mach task_info system call.

Sat Oct  8 09:06:55 2016  Aurelien Jacobs  <aurel@gnuage.org>

	* lib/logger.rb (Logger::Period#next_rotate_time): fix monthly log
	  rotate when DST is applied during a month of 31 days.
	  [Fix GH-1458]

Fri Oct  7 20:21:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_prof_setup_new_record): fix the condition to get
	  rusage.

	* gc.c (gc_profile_dump_major_reason): remove undefined flags.

Fri Oct  7 19:18:33 2016  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/*.c, ext/win32ole/win32ole.h: use RB_INT2FIX instead of
	  INT2FIX, and so on.
